# vamp

./: PIXI_SETUP.md  pixi.toml  pyproject.toml  rockerc.yaml
.devcontainer/: Dockerfile  devcontainer.json
