[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0", "cmake >=3.1", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "vamp-planner"
version = "0.6.1"
description = "Vector-Accelerated Motion Planner"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zachary Kingston", email = "zkingston@purdue.edu" },
    { name = "Wil Thomason", email = "wil.thomason@gmail.com" },
    { name = "Clayton Ramsey", email = "claytonwramsey@gmail.com" }
]
classifiers = [
]
dependencies = []

[project.optional-dependencies]
examples = ["fire", "pybullet", "pyyaml", "tqdm", "pandas", "tabulate", "xmltodict"]
heightmaps = ["pillow"]

[project.urls]
Homepage = "https://github.com/KavrakiLab/vamp"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/vamp"]

cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
VAMP_LTO = "OFF"
VAMP_ROBOT_MODULES="sphere;ur5;panda;fetch;baxter"
VAMP_ROBOT_STRUCTS="Sphere;UR5;Panda;Fetch;Baxter"

[tool.pixi.project]
name = "vamp"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
description = "VAMP planner environment managed by pixi"

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
cmake = ">=3.15"
ninja = "*"
pip = "*"
clang = "*" 
clangxx = "*"
eigen = "*"
pybullet = "*"
pandas = "*"

[tool.pixi.target.linux-64.dependencies]
libstdcxx-ng = "*"

[tool.pixi.pypi-dependencies]
numpy = "*"
fire = "*"
tabulate = "*"
xmltodict = "*"
scikit-build-core = "*" 
pybind11 = "*"

# =============================================================================
# PIXI TASKS
# =============================================================================

[tool.pixi.tasks]

# Setup and Build Tasks - Using alternative approach due to CMake path issues
setup = { depends-on = ["setup-deps", "build-and-install"] }
setup-debug = { depends-on = ["setup-deps", "build-and-install-debug"] }

# Install Python dependencies only
setup-deps = "pip install fire pybullet pyyaml tqdm pandas tabulate xmltodict"

# Build and install with external directory approach
        # Install from PyPI (recommended)
        install = "pip install vamp-planner"
        
        # Install from source with examples  
        install-dev = { cmd = "pip install -e '.[examples]'", env = { CC = "clang", CXX = "clang++" } }
        
        # Incremental rebuild (as per README)
        rebuild = "pip install --no-build-isolation -Ceditable.rebuild=true -ve ."

build-and-install-debug = { cmd = "bash -c 'mkdir -p /tmp/vamp_install && export CC=clang CXX=clang++ CMAKE_PREFIX_PATH=/vamp/.pixi/envs/default CMAKE_INSTALL_PREFIX=/tmp/vamp_install CMAKE_BUILD_TYPE=Debug && cd /tmp && cp -r /vamp /tmp/vamp_src && cd /tmp/vamp_src && pip install -e .[examples] --no-build-isolation && cp -r src/vamp /vamp/.pixi/envs/default/lib/python3.12/site-packages/ || echo \"Build failed, trying manual approach\"'", cwd = "/vamp" }

# Fallback: Manual setup instructions
setup-manual = "echo '🔧 Manual Setup (if automated fails):' && echo '1. The issue is CMake finds Eigen in the pixi env inside source dir' && echo '2. Workaround: Build outside source directory' && echo '3. Commands:' && echo '   cd /tmp && cp -r /vamp /tmp/vamp_src' && echo '   cd /tmp/vamp_src' && echo '   export CC=clang CXX=clang++ CMAKE_PREFIX_PATH=/vamp/.pixi/envs/default' && echo '   pip install -e .[examples] --no-build-isolation' && echo '4. Copy built module back to pixi env' && echo '   cp -r src/vamp /vamp/.pixi/envs/default/lib/python3.12/site-packages/'"

# Test and Help Tasks  
test = { cmd = "python -c \"import vamp; print('✅ VAMP successfully imported!'); print('Available robots:', list(vamp.robots.keys()))\"", depends-on = ["setup"] }
help = "echo '🚀 VAMP Motion Planning Framework' && echo '' && echo '📋 Quick Start:' && echo '1. pixi run setup       # Build and install VAMP' && echo '2. pixi run test        # Test installation' && echo '3. pixi run examples    # List all examples' && echo '4. pixi run sphere-cage # Run first example' && echo '' && echo '🎯 Examples run with visualization enabled by default!' && echo '📖 See README.md for detailed documentation'"
examples = "echo '🎯 Available VAMP Examples:' && echo '' && echo 'Core Examples (with visualization):' && echo '  pixi run sphere-cage     - Panda planning through spheres' && echo '  pixi run attachments     - Planning with attached objects' && echo '  pixi run flying-sphere   - Flying sphere over heightfield' && echo '  pixi run random-dance    - Random configuration sampling' && echo '' && echo 'Robot-Specific MBM Visualizations:' && echo '  pixi run panda-mbm       - Panda MBM problems' && echo '  pixi run ur5-mbm         - UR5 MBM problems' && echo '  pixi run fetch-mbm       - Fetch MBM problems' && echo '  pixi run baxter-mbm      - Baxter MBM problems' && echo '' && echo 'Benchmarks (no visualization):' && echo '  pixi run bench-sphere    - Sphere cage benchmark' && echo '  pixi run bench-flying    - Flying sphere benchmark' && echo '' && echo 'Variations:' && echo '  pixi run sphere-small/large, attachments-small/large, flying-small/large'"

# Core Examples (with visualization enabled)
sphere-cage = { cmd = "python scripts/sphere_cage_example.py --visualize", depends-on = ["setup"] }
attachments = { cmd = "python scripts/attachments.py", depends-on = ["setup"] }
flying-sphere = { cmd = "python scripts/flying_sphere.py --visualize", depends-on = ["setup"] }
random-dance = { cmd = "python scripts/random_dance.py", depends-on = ["setup"] }

# MBM Evaluation and Visualization
evaluate-mbm = { cmd = "python scripts/evaluate_mbm.py", depends-on = ["setup"] }
panda-mbm = { cmd = "python scripts/visualize_mbm.py --robot=panda --index=0", depends-on = ["setup"] }
ur5-mbm = { cmd = "python scripts/visualize_mbm.py --robot=ur5 --index=0", depends-on = ["setup"] }
fetch-mbm = { cmd = "python scripts/visualize_mbm.py --robot=fetch --index=0", depends-on = ["setup"] }
baxter-mbm = { cmd = "python scripts/visualize_mbm.py --robot=baxter --index=0", depends-on = ["setup"] }

# Benchmarks (no visualization)
bench-sphere = { cmd = "python scripts/sphere_cage_example.py --benchmark --n_trials=10", depends-on = ["setup"] }
bench-flying = { cmd = "python scripts/flying_sphere.py --iterations=1000", depends-on = ["setup"] }

# Example Variations
sphere-small = { cmd = "python scripts/sphere_cage_example.py --visualize --radius=0.02", depends-on = ["setup"] }
sphere-large = { cmd = "python scripts/sphere_cage_example.py --visualize --radius=0.08", depends-on = ["setup"] }
attachments-small = { cmd = "python scripts/attachments.py --attachment_radius=0.02 --attachment_offset=0.05", depends-on = ["setup"] }
attachments-large = { cmd = "python scripts/attachments.py --attachment_radius=0.05 --attachment_offset=0.1", depends-on = ["setup"] }
flying-small = { cmd = "python scripts/flying_sphere.py --visualize --radius=0.02 --x=2 --y=2 --z=1", depends-on = ["setup"] }
flying-large = { cmd = "python scripts/flying_sphere.py --visualize --radius=0.05 --x=4 --y=4 --z=2", depends-on = ["setup"] }

# C++ Examples (if needed)
build-cpp = { cmd = "cd scripts/cpp && cmake -B build . && cmake --build build", depends-on = ["setup"] }
cpp-rrtc = { cmd = "cd scripts/cpp && ./build/rrtc_example", depends-on = ["build-cpp"] }

# Development and Debugging
check-env = "echo '🔍 Environment Check:' && python --version && cmake --version && clang --version && echo '✅ Environment ready'"
clean = "rm -rf build/ dist/ *.egg-info/ .pixi/envs/default/lib/python*/site-packages/vamp*"
full-rebuild = { depends-on = ["clean", "setup"] }
